--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+//The following code should be used for the first time that the database needs to be created
+//spring.jpa.hibernate.ddl-auto = creat
+
+
+//And after the database is created, the following code should be placed because if it is always on creat, the database data will be deleted
+
 spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
